Fixed spacing between images in portfolio and added banners.

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,33 @@ main .container {
     float: right;
 } */
 
+h1 {
+    padding-bottom: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.img-fluid {
+    margin-bottom: 2rem;
+}
+
+.bannertxt {
+    position: absolute;
+    background-color: teal;
+    color: white;
+    width: 100%;
+    height: auto;
+    bottom: 4rem;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 1.75rem;
+}
+
+.col-md-5 {
+    padding: 0;
+    margin: 1rem 2rem 1rem 2rem;
+}
+
 /*** Footer ***/
 footer {
     text-align: center;
